set up base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,12 +26,11 @@
 
 
 
-
 <!--js links for bootstrap-->
 <script src="{{STATIC_URL}}js/jquery.js"></script>
 <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
 <script>
-$(document).reaady(function(){
+$(document).ready(function(){
 	 $('#myCarousel').hide().carousel();
 });
 	
