--- a/templates/login.html
+++ b/templates/login.html
@@ -3,17 +3,19 @@
 <!-- contents for the login templates-->
 {% block page_contents %}
 <div class = 'row-fluid' style='margin-top: 0px;'>
-<div class = 'well' style=' min-height: 300px;  padding-top: 50px; text-align:justfy;'>
+	
+<div class = 'well' style=' min-height: 100px;  padding-top: 50px; text-align:justfy;'>
 <!-- login form -->
 
 <form action ="{% url 'authorize'%}" method="POST">
 {% csrf_token %}	
-<b>username:</b><input type = 'text' name = 'username'/> <br>
-<b>password:</b><input type = 'password' name = 'password' size = '20' /> <br><br>
+<b>username:</b><input type = 'text' name = 'username' placeholder = 'enter your E-mail'/> <br>
+<b>password:</b><input type = 'password' name = 'password' size = '20' placeholder = 'enter your password' /> <br><br>
 <input type = 'submit' value = 'login' name = 'login' />
 </form>
 
 </div>
+
 </div>
 
 {% endblock %}
