updating views and login template

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% load cms_tags menu_tags %}
 <!-- contents for the login templates-->
 {% block page_contents %}
-<div class = 'row-fluid' style='margin-top: 0px;'>
+<div class = 'row-fluid'>
 	
 <div class = 'well' style=' min-height: 100px;  padding-top: 50px; text-align:justfy;'>
 <!-- login form -->
