--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
 <div class = 'row-fluid'>
 	
 <div class = 'well' style=' min-height: 100px;  padding-top: 50px; text-align:justfy;'>
+	<p><b>{{message}}</b></p>
 <!-- login form -->
 
 <form action ="{% url 'authorize'%}" method="POST">
