--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -5,7 +5,7 @@
 <div class = 'row-fluid'>
 
 <div class = 'well'>
-message:{{message}}<br>
+<span class ='pull-right'>message:{{message}}</span><br>
 position:{{position}}<br>
 username:{{username}}<br>
 password:{{password}}
