--- a/templates/base.html
+++ b/templates/base.html
@@ -26,11 +26,14 @@
 <body align='center'>
 <div class='container-fluid'>
 	
-<div class = 'row-fluid'>
-<img src = "{{MEDIA_URL}}img/title.png"/> 
+<div class = 'row-fluid' style = 'color:white;background-image:url("{{MEDIA_URL}}img/title.png");min-height:90px; min-width:100px'>
+<!-- heading
+The United Republic of Tanzabia
+Ministry of water
+-->
 </div>
 
-<div class = 'row-fluid' style = 'color:white;background-image:url("{{MEDIA_URL}}img/title1.png");' >
+<div class = 'row-fluid' style = 'color:white;background-image:url("{{MEDIA_URL}}img/title1.png"); '  >
 STATIC AND DYNAMIC WATER POINT INFORMATION  MANAGEMENT
 </div>
 
