initiate System admin interface

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,7 +8,11 @@
 <span class ='pull-right'>message:{{message}}</span><br>
 position:{{position}}<br>
 username:{{username}}<br>
-password:{{password}}
+password:{{password}}<br>
+<hr>
+<a href = "{% url 'createEngineer' %}">add engineer</a>
+<hr>
+<a href = "{% url 'createChairperson' %}">add Cowso</a>
 </div>
 
 </div>
