drafting cowso chaiperson interface

--- a/templates/chairperson.html
+++ b/templates/chairperson.html
@@ -5,7 +5,7 @@
 <div class = 'row-fluid'>
 
 <div class = 'well'>
-
+<span class="pull-right"><em>Date : {% now "jS F Y" %}</em></span><br><hr>
 <form action = "" method = "">
 <!-- checking and display all water point for a particular COWSO chairperson-->	
 {% for waterpoint in waterpointslist%}
