drafting Distrtict water engineer interface

--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -5,6 +5,8 @@
 <div class = 'row-fluid'>
 
 <div class = 'well'>
+<span class="pull-right"><em>Date : {% now "jS F Y" %}</em></span><br><hr>
+	
 <span class ='pull-right'>message:{{message}}</span><br>
 position:{{position}}<br>
 username:{{username}}<br>
