add tel phone number field in the registration form

--- a/templates/createChairperson.html
+++ b/templates/createChairperson.html
@@ -19,6 +19,7 @@ COWSO chairperson name : <input type = "text" name = "name" placeholder = "Enter
 password : <input type = "password" name = "password" placeholder = "Enter his or her password" /><br>
 E-mail : <input type = "text" name = "email" placeholder = "e-mail, example@abcd.com" /><br>
 Address : <input type = "text" name = "address" placeholder = "Enter his or her address" /><br>
+Telphone number : <input type = "text" name = "number" placeholder = "Enter telphone number" /><br>
 location : <input type = "text" name = "location" placeholder = "Enter name of his or her physical location"/><br>
 <!-- gender: male or female-->
 Sex : <input type = "radio" name = "sex" value = "male" />male
