complete retrieveing data from registration for creating cowso and engineer

--- a/templates/createEngineer.html
+++ b/templates/createEngineer.html
@@ -20,7 +20,7 @@ password : <input type = "password" name = "password" placeholder = "Enter his o
 E-mail : <input type = "text" name = "email" placeholder = "e-mail, example@abcd.com" /><br>
 Address : <input type = "text" name = "address" placeholder = "Enter his or her address" /><br>
 Telphone number : <input type = "text" name = "number" placeholder = "Enter telphone number" /><br>s
-Sex : <!-- gender: male or female-->
+ <!-- gender: male or female-->
 Sex : <input type = "radio" name = "sex" value = "male" />male
 	  <input type = "radio" name = "sex" value= "female" /> female<br><br>
 <input type = "submit" name = "create user" value = "create user" />
