--- a/templates/createEngineer.html
+++ b/templates/createEngineer.html
@@ -19,10 +19,13 @@ District water Engineer name : <input type = "text" name = "name" placeholder = 
 password : <input type = "password" name = "password" placeholder = "Enter his or her password" /><br>
 E-mail : <input type = "text" name = "email" placeholder = "e-mail, example@abcd.com" /><br>
 Address : <input type = "text" name = "address" placeholder = "Enter his or her address" /><br>
-Telphone number : <input type = "text" name = "number" placeholder = "Enter telphone number" /><br>s
+Telphone number : <input type = "text" name = "number" placeholder = "Enter telphone number" /><br>
  <!-- gender: male or female-->
-Sex : <input type = "radio" name = "sex" value = "male" />male
-	  <input type = "radio" name = "sex" value= "female" /> female<br><br>
+Sex : 	  
+	  <select name = 'sex'>
+	  <option name = 'sex' value = 'male'>male</option>
+	  <option name = 'sex' value = 'female'>female</option>
+	  </select><br>
 <input type = "submit" name = "create user" value = "create user" />
 <input type = "reset"  value = "cancel" />
 </form>
