--- a/templates/users.html
+++ b/templates/users.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 {% load cms_tags menu_tags %}
 
+
+<div class = 'well'><ul class='breadcrumb' style='background-color:white; text-align:left'>
+{% show_breadcrumb %}
+</ul>
+</div>
+
+
 {% block page_contents %}
 <div class = 'row-fluid'>
 
