using object in addmin home oage

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -9,8 +9,8 @@
 	
 <span class ='pull-right'>message:{{message}}</span><br>
 position:{{position}}<br>
-username:{{username}}<br>
-password:{{password}}<br>
+username:{{user.admin_name}}<br>
+password:{{user.password}}<br>
 <hr>
 <a href = "{% url 'createEngineer' %}">add engineer</a>
 <hr>
