--- a/templates/createEngineer.html
+++ b/templates/createEngineer.html
@@ -6,9 +6,13 @@
 
 <div class = 'well' style=' min-height: 100px;  padding-top: 10px; text-align:justfy;'>
 <!--registsration form for creating District water engineer-->
-<span class="pull-right"><em>Date : {% now "jS F Y" %}</em></span>
-<hr>
-{{message}}
+<span class="pull-right"><em>Date : {% now "jS F Y" %}</em><br>
+<a href ''>back</a>
+</span><br><hr>
+{% if message %}{{message}}
+{% else %}
+Fill the form below, to register new cowso chairperson
+{% endif %}
 <hr>
 
 <form action "{% url 'createEngineer' user.id %}" method = "POST">
@@ -26,7 +30,7 @@ Sex :
 	  <option name = 'sex' value = 'male'>male</option>
 	  <option name = 'sex' value = 'female'>female</option>
 	  </select><br>
-<input type = "submit" name = "create user" value = "create user" />
+<input type = "submit" name = "create user" value = "submit" />
 <input type = "reset"  value = "cancel" />
 </form>
 
