solving back to syatem admin page from registration page

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,15 +24,12 @@
 
 <!-- page body -->	
 <body align='center' style = 'color : black'>
-<div class='container-fluid'  style = 'background-image:url("{{MEDIA_URL}}img/page.jpg");'>
+<div class='container-fluid'  style = 'background-image:url("{{MEDIA_URL}}img/");'>
 	
 <div class = 'row-fluid '>
 <div class = 'well' style = 'background-image:url("{{MEDIA_URL}}img/page.jpg");margin-top:50px;'>
 The United Republic of Tanzabia<br>
 Ministry of water<br>
-
-
-
 
 STATIC AND DYNAMIC WATER POINT INFORMATION  MANAGEMENT
 
