--- a/templates/waterpointdescription.html
+++ b/templates/waterpointdescription.html
@@ -3,23 +3,20 @@
 
 {% block page_contents %}
 <div class = 'row-fluid'>
-
-<div class = 'well' style=' min-height: 100px;  padding-top: 10px; text-align:justfy;'>
+<div class = "well">	
 {{message}}<hr>
-<br>
-
 <form action ="{% url 'waterpointDetail'%}" method="POST">
 {% csrf_token %}
 	
-<table >
-{{ form.as_table}}
-<table>
-<div style = "text-align:left;">
+<div style = "text-align:center; ">
+<table align="center">
+		{{ form.as_table}}
+</table>
 <input type = 'submit' value = "save" name = "submit">
 <input type = "reset" value = "cancel">
 </div>
 </form>
-
+</div>
 </div>
 
 </div>
