update logi error message

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 <div class = 'well' style=' min-height: 100px;text-align:justfy;'>
 	
 
-<p><b>{{message}}</b></p>
+<p style = 'color:red';><i>{{message}}</i></p>
 <hr>
 
 <form action ="{% url 'authorize'%}" method="POST">
