--- a/templates/waterpointdescription.html
+++ b/templates/waterpointdescription.html
@@ -5,12 +5,13 @@
 <div class = 'row-fluid'>
 <div class = "well">	
 {{message}}<hr>
-<form action ="{% url 'waterpointDetail'%}" method="POST">
-{% csrf_token %}
-	
+
+<!-- form for creating all descrption of water point-->
+<form action ="{% url 'waterpointDetail' user.id %}" method="POST">
+{% csrf_token %}	
 <div style = "text-align:center; ">
 <table align="center">
-		{{ form.as_table}}
+{{ form.as_table}}
 </table>
 <input type = 'submit' value = "save" name = "submit">
 <input type = "reset" value = "cancel">
