reduce hardcoding of templates in base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,13 +35,15 @@ STATIC AND DYNAMIC WATER POINT INFORMATION  MANAGEMENT
 
 </div>
 <!--
-<div class = 'well'><ul class='breadcrumb' style='background-color:white; text-align:left'>
-{% show_breadcrumb %}
-<span class="pull-right"><em>Date : {% now "jS F Y" %}</em></span>
-</ul>
-</div>-->
-
+contents of the pages
+-->
+<div class = 'row-fluid'>
+<div class = 'well' style=' min-height: 100px;text-align:justfy;'>
+<span class="pull-right"><em>Date : {% now "jS F Y" %}</em></span><br><br>		
 {% block page_contents %}{% endblock %}
+</div>
+</div>
+
 </div>
 <footer>
 <p>This site developed by <b>Mr. Joseph Chingalo</b>, Computer science student at University of Dar es salaam<br>
