--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,12 +1,7 @@
 {% extends "base.html" %}
 {% load cms_tags menu_tags %}
-
 {% block page_contents %}
-<div class = 'row-fluid'>
-
-<div class = 'well'>
-<span class="pull-right"><em>Date : {% now "jS F Y" %}</em></span><br><hr>	
-	
+<!-- information about current user and logout option -->	
 <span class ='pull-right'>message:{{message}}</span><br>
 position:{{position}}<br>
 username:{{user.admin_name}}<br>
@@ -59,8 +54,5 @@ To add successful register new District water Engineer in the system,
 
 </table>
 
-</div>
-
-</div>
 
 {% endblock %}
