update login form template

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,8 +10,8 @@
 <!-- login form -->
 <form action ="{% url 'authorize'%}" method="POST">
 {% csrf_token %}	
-<b>username:</b><input type = 'text' name = 'username' placeholder = 'enter your E-mail'/> <br>
-<b>password:</b><input type = 'password' name = 'password' size = '20' placeholder = 'enter your password' /> <br><br>
+<b>username :&#160;&#160;&#160;</b><input type = 'text' name = 'username' placeholder = 'enter your E-mail'/> <br>
+<b>password :&#160;&#160;&#160;</b><input type = 'password' name = 'password' size = '20' placeholder = 'enter your password' /> <br><br>
 <input type = 'submit' value = 'login' name = 'login' />
 </form>
 
