update admin interface

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -38,7 +38,7 @@ To add successful register new District water Engineer in the system,
 </ul>
 <a href = "{% url 'createChairperson' user.id %}">add Cowso</a>
 </td>
-<td>still unser development. Please wait!!!</td>
+<td>still under development. Please wait!!!</td>
 
 </tr>
 </tbody>
