add region and district fields for new user registration form

--- a/templates/createChairperson.html
+++ b/templates/createChairperson.html
@@ -23,6 +23,8 @@ COWSO chairperson name : <input type = "text" name = "name" placeholder = "Enter
 password : <input type = "password" name = "password" placeholder = "Enter his or her password" /><br>
 E-mail : <input type = "text" name = "email" placeholder = "e-mail, example@abcd.com" /><br>
 Address : <input type = "text" name = "address" placeholder = "Enter his or her address" /><br>
+District : <input type = "text" name = "district" placeholder = "Enter District" /><br>
+Region : <input type = "text" name = "region" placeholder = "Enter Region" /><br>
 Telphone number : <input type = "text" name = "number" placeholder = "Enter telphone number" /><br>
 location : <input type = "text" name = "location" placeholder = "Enter name of his or her physical location"/><br>
 <!-- gender: male or female-->
