--- a/templates/createEngineer.html
+++ b/templates/createEngineer.html
@@ -22,6 +22,8 @@ District water Engineer id : <input type = "text" name = "id" placeholder = "Ent
 District water Engineer name : <input type = "text" name = "name" placeholder = "Enter full name" /><br>
 password : <input type = "password" name = "password" placeholder = "Enter his or her password" /><br>
 E-mail : <input type = "text" name = "email" placeholder = "e-mail, example@abcd.com" /><br>
+District : <input type = "text" name = "district" placeholder = "Enter District" /><br>
+Region : <input type = "text" name = "region" placeholder = "Enter Region" /><br>
 Address : <input type = "text" name = "address" placeholder = "Enter his or her address" /><br>
 Telphone number : <input type = "text" name = "number" placeholder = "Enter telphone number" /><br>
  <!-- gender: male or female-->
