--- a/templates/createChairperson.html
+++ b/templates/createChairperson.html
@@ -18,21 +18,64 @@ Fill the form below, to register new COWSO Chairperson
 <!-- registration form for create new cowso chairperson -->
 <form action "{% url 'createChairperson' user.id%}" method = "POST">
 {% csrf_token %}
-COWSO chairperson id : <input type = "text" name = "id" placeholder = "Enter his or her id" /><br>
-COWSO chairperson name : <input type = "text" name = "name" placeholder = "Enter full name" /><br>
-password : <input type = "password" name = "password" placeholder = "Enter his or her password" /><br>
-E-mail : <input type = "text" name = "email" placeholder = "e-mail, example@abcd.com" /><br>
-Address : <input type = "text" name = "address" placeholder = "Enter his or her address" /><br>
-District : <input type = "text" name = "district" placeholder = "Enter District" /><br>
-Region : <input type = "text" name = "region" placeholder = "Enter Region" /><br>
-Telphone number : <input type = "text" name = "number" placeholder = "Enter telphone number" /><br>
-location : <input type = "text" name = "location" placeholder = "Enter name of his or her physical location"/><br>
-<!-- gender: male or female-->
-Sex : 
-	  <select name = 'sex'>
-	  <option name = 'sex' value = 'male'>male</option>
-	  <option name = 'sex' value = 'female'>female</option>
-	  </select><br>
+<table align = 'center'>
+<tr>
+	<td id = 'field_name' >COWSO chairperson id &#160;&#160;</td>
+	<td><input type = "text" name = "id" placeholder = "Enter his or her id" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >COWSO chairperson name &#160;&#160; </td>
+	<td><input type = "text" name = "name" placeholder = "Enter full name" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >password &#160;&#160;</td>
+	<td><input type = "password" name = "password" placeholder = "Enter his or her password" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >E-mail &#160;&#160;</td>
+	<td><input type = "text" name = "email" placeholder = "e-mail, example@abcd.com" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >Address &#160;&#160; </td>
+	<td><input type = "text" name = "address" placeholder = "Enter his or her address" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >District &#160;&#160;</td>
+	<td><input type = "text" name = "district" placeholder = "Enter District" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >Region &#160;&#160;</td>
+	<td><input type = "text" name = "region" placeholder = "Enter Region" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >Telphone number &#160;&#160;</td>
+	<td><input type = "text" name = "number" placeholder = "Enter telphone number" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >location&#160;&#160; </td>
+	<td><input type = "text" name = "location" placeholder = "Enter name of his or her physical location"/></td>
+</tr>
+<tr>
+	<!-- gender: male or female-->
+	<td id = 'field_name' >Sex &#160;&#160;</td>
+	<td>
+		<select name = 'sex'>
+			<option name = 'sex' value = 'male'>male</option>
+			<option name = 'sex' value = 'female'>female</option>
+		</select>
+	</td>
+</tr>
+
+</table>
+<br>
 <input type = "submit" name = "create user" value = "submit" />
 <input type = "reset"  value = "cancel" />
 </form>
