--- a/templates/createEngineer.html
+++ b/templates/createEngineer.html
@@ -17,16 +17,51 @@ Fill the form below, to register new District water Engineer
 
 <!--registsration form for creating District water engineer-->
 <form action "{% url 'createEngineer' user.id %}" method = "POST">
+	{% csrf_token %}
 <table align = 'center'>
 <tr>
-	<td></td>
-	<td></td>
+	<td id = 'field_name' >District water Engineer id &#160;&#160; </td>
+	<td><input type = "text" name = "id" placeholder = "Enter his or her id" /></td>
 </tr>
-	
+
+<tr>
+	<td id = 'field_name' >District water Engineer name &#160;&#160; </td>
+	<td><input type = "text" name = "name" placeholder = "Enter full name" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >password &#160;&#160; </td>
+	<td><input type = "password" name = "password" placeholder = "Enter his or her password" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >E-mail &#160;&#160; </td>
+	<td><input type = "text" name = "email" placeholder = "e-mail, example@abcd.com" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >District &#160;&#160; </td>
+	<td><input type = "text" name = "district" placeholder = "Enter District" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >Region &#160;&#160; </td>
+	<td><input type = "text" name = "region" placeholder = "Enter Region" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >Address &#160;&#160; </td>
+	<td><input type = "text" name = "address" placeholder = "Enter his or her address" /></td>
+</tr>
+
+<tr>
+	<td id = 'field_name' >Telphone number &#160;&#160; </td>
+	<td><input type = "text" name = "number" placeholder = "Enter telphone number" /></td>
+</tr>	
 
 <tr>
 	<!-- gender: male or female-->
-	<td>Sex :</td>
+	<td id = 'field_name' >Sex &#160;&#160;</td>
 	<td>
 		<select name = 'sex'>
 			<option name = 'sex' value = 'male'>male</option>
@@ -34,22 +69,10 @@ Fill the form below, to register new District water Engineer
 		</select>
 	</td>
 </tr>
-</table>	
-{% csrf_token %}
-District water Engineer id : <input type = "text" name = "id" placeholder = "Enter his or her id" /><br>
-District water Engineer name : <input type = "text" name = "name" placeholder = "Enter full name" /><br>
-password : <input type = "password" name = "password" placeholder = "Enter his or her password" /><br>
-E-mail : <input type = "text" name = "email" placeholder = "e-mail, example@abcd.com" /><br>
-District : <input type = "text" name = "district" placeholder = "Enter District" /><br>
-Region : <input type = "text" name = "region" placeholder = "Enter Region" /><br>
-Address : <input type = "text" name = "address" placeholder = "Enter his or her address" /><br>
-Telphone number : <input type = "text" name = "number" placeholder = "Enter telphone number" /><br>
- <!-- gender: male or female-->
-Sex : 	  
-	  <select name = 'sex'>
-	  <option name = 'sex' value = 'male'>male</option>
-	  <option name = 'sex' value = 'female'>female</option>
-	  </select><br>
+</table>
+<br>	
+
+ 
 <input type = "submit" name = "create user" value = "submit" />
 <input type = "reset"  value = "cancel" />
 </form>
