--- a/templates/base.html
+++ b/templates/base.html
@@ -29,11 +29,11 @@
 	
 <div class = 'row-fluid '>
 <div class = 'well' style = 'background-image:url("{{MEDIA_URL}}img/page.jpg");margin-top:50px;'>
-The United Republic of Tanzabia<br>
+<p class = 'title_of_site'>
+The United Republic of Tanzania<br>
 Ministry of water<br>
-
-STATIC AND DYNAMIC WATER POINT INFORMATION  MANAGEMENT
-
+</p>	
+<p class = 'head_of_site'>STATIC AND DYNAMIC WATER POINT INFORMATION  MANAGEMENT</p>
 </div>
 <!--
 contents of the pages
